src/test/ui/const-generics/occurs-check/unify-fixpoint.stderr
warning: the feature `const_generics` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/unify-fixpoint.rs:1:12
   |
LL | #![feature(const_generics)]
   |            ^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #44580 <https://github.com/rust-lang/rust/issues/44580> for more information

error: constant expression depends on a generic parameter
  --> $DIR/unify-fixpoint.rs:9:32
   |
LL | fn bind<const N: usize>(value: [u8; N + 2]) -> [u8; N * 2] {
   |                                ^^^^^^^^^^^
   |
   = note: this may fail depending on what value the parameter takes

error: constant expression depends on a generic parameter
  --> $DIR/unify-fixpoint.rs:9:48
   |
LL | fn bind<const N: usize>(value: [u8; N + 2]) -> [u8; N * 2] {
   |                                                ^^^^^^^^^^^
   |
   = note: this may fail depending on what value the parameter takes

error: aborting due to 2 previous errors; 1 warning emitted

